<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartdoc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_yoga"
        android:name="com.example.smartdoc.ui.yoga.YogaFragment"
        android:label="@string/menu_yoga"
        tools:layout="@layout/fragment_yoga" />

    <fragment
        android:id="@+id/nav_nutri"
        android:name="com.example.smartdoc.ui.nutrition.NutritionFragment"
        android:label="@string/menu_nutri"
        tools:layout="@layout/fragment_nutrition" />

    <fragment
        android:id="@+id/nav_gloss"
        android:name="com.example.smartdoc.ui.glossary.GlossaryFragment"
        android:label="@string/menu_gloss"
        tools:layout="@layout/fragment_glossary" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.smartdoc.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>