<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/homePic1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="center_horizontal"
            android:src="@drawable/homepic1"
            android:contentDescription="null"/>

        <TextView
            android:id="@+id/homePara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/homePic1"
            android:gravity="center"
            android:text="@string/home_para1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/homePic2"
            android:layout_width="753dp"
            android:layout_height="231dp"
            android:layout_below="@id/homePara1"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="500dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="null"
            android:gravity="center_horizontal"
            android:src="@drawable/homepic2" />

        <TextView
            android:id="@+id/homePara2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homePic2"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/home_para2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/homePic3"
            android:layout_width="match_parent"
            android:layout_height="254dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-19dp"
            android:layout_below="@id/homePara2"
            android:gravity="center_horizontal"
            android:src="@drawable/homepic3"
            android:contentDescription="null"/>

        <TextView
            android:id="@+id/homePara3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homePic3"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/home_para3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
