<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/contactPic1"
            android:layout_width="1000dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:contentDescription="null"
            android:gravity="center_horizontal"
            android:src="@drawable/contactpic1" />

        <TextView
            android:id="@+id/contactPara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactPic1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/contact_para"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="450dp"
            android:gravity="center"
            android:text="@string/address_para"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/map_icon_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/mail_icon_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="600dp"
            android:background="@drawable/mail_icon" />

        <ImageButton
            android:id="@+id/call_icon_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="180dp"
            android:layout_marginTop="600dp"
            android:gravity="end"
            android:background="@drawable/call_icon" />

        <ImageButton
            android:id="@+id/sms_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="310dp"
            android:layout_marginTop="600dp"
            android:gravity="end"
            android:background="@drawable/sms_pic" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="750dp"
            android:gravity="center"
            android:text="@string/feedback_form_intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="830dp"
            android:gravity="center"
            android:numStars="5"/>

        <TextView
            android:id="@+id/tvRateCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="870dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="910dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
